--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
-
 /* Your CSS Code here. */
+		table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            border: 1px solid black;
+            padding: 10px;
+            text-align: right;
+            font-weight: bold;
+        }
+
+        th {
+            /* background-color: #f2f2f2; */
+            text-align: left;
+        }
+
+        .row1 {
+            text-align: left;
+        }
